Corrected 100vh scrolling on mobile.

--- a/src/styles/jumbotron.scss
+++ b/src/styles/jumbotron.scss
@@ -19,7 +19,6 @@ html {
 }
 
 .jumbotron {
-  height: 100vh;
   padding-left: 0 !important;
   padding-right: 0 !important;
   margin: 0 !important;
